storage/innobase/row/row0ins.cc
@@ -1759,13 +1759,6 @@ row_ins_check_foreign_constraint(
 		cmp = cmp_dtuple_rec(entry, rec, offsets);
 
 		if (cmp == 0) {
-
-			ulint	lock_type;
-
-			lock_type = skip_gap_lock
-				? LOCK_REC_NOT_GAP
-				: LOCK_ORDINARY;
-
 			if (rec_get_deleted_flag(rec,
 						 rec_offs_comp(offsets))) {
 				/* In delete-marked records, DB_TRX_ID must
@@ -1775,7 +1768,9 @@ row_ins_check_foreign_constraint(
 							    offsets));
 
 				err = row_ins_set_shared_rec_lock(
-					lock_type, block,
+					skip_gap_lock
+					? LOCK_REC_NOT_GAP
+					: LOCK_ORDINARY, block,
 					rec, check_index, offsets, thr);
 				switch (err) {
 				case DB_SUCCESS_LOCKED_REC:
@@ -1857,23 +1852,21 @@ row_ins_check_foreign_constraint(
 		} else {
 			ut_a(cmp < 0);
 
-			err = DB_SUCCESS;
-
-			if (!skip_gap_lock) {
-				err = row_ins_set_shared_rec_lock(
+			err = skip_gap_lock
+				? DB_SUCCESS
+				: row_ins_set_shared_rec_lock(
 					LOCK_GAP, block,
 					rec, check_index, offsets, thr);
-			}
 
 			switch (err) {
 			case DB_SUCCESS_LOCKED_REC:
+				err = DB_SUCCESS;
+				/* fall through */
 			case DB_SUCCESS:
 				if (check_ref) {
 					err = DB_NO_REFERENCED_ROW;
 					row_ins_foreign_report_add_err(
 						trx, foreign, rec, entry);
-				} else {
-					err = DB_SUCCESS;
 				}
 			default:
 				break;
@@ -1921,18 +1914,10 @@ do_possible_lock_wait:
 
 		thr->lock_state = QUE_THR_LOCK_NOLOCK;
 
-		DBUG_PRINT("to_be_dropped",
-			   ("table: %s", check_table->name.m_name));
-		if (check_table->to_be_dropped) {
-			/* The table is being dropped. We shall timeout
-			this operation */
-			err = DB_LOCK_WAIT_TIMEOUT;
-
-			goto exit_func;
-		}
-
+		err = check_table->to_be_dropped
+			? DB_LOCK_WAIT_TIMEOUT
+			: trx->error_state;
 	}
-
 
 exit_func:
 	if (heap != NULL) {
